IDEA-393623 [java]: cleanup
GitOrigin-RevId: 800d67a96d2746d8a3097e06b1dc4bdfafd690f2